syntax = "proto3";

package session.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/session/v1;sessionv1";

message Session {
  string id = 1;
  string campaign_id = 2;
  string name = 3;
  SessionStatus status = 4;
  google.protobuf.Timestamp started_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp ended_at = 7;
  int64 version = 8;
}

enum SessionStatus {
  STATUS_UNSPECIFIED = 0;
  ACTIVE = 1;
  ENDED = 2;
}
